# loom

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  IDEAS  README.md  STRANGE.md  TODOS  TODOs  ny_raw.json  octi_test.json  sig-alternate-sigmod09.cls  sketch.tex  test.json  ulm_raw.json
src/: CMakeLists.txt
src/dot/: CMakeLists.txt  Dot2TgMain.cpp  Parser.cpp  Parser.h
src/dot/tests/: CMakeLists.txt
src/graphbuilder/: CMakeLists.txt  GraphBuilderMain.cpp
src/graphbuilder/builder/: Builder.cpp  Builder.h
src/graphbuilder/config/: ConfigReader.cpp  ConfigReader.h  GraphBuilderConfig.h
src/graphbuilder/graph/: Edge.cpp  Edge.h  EdgeTripGeom.cpp  EdgeTripGeom.h  Graph.cpp  Graph.h  Node.cpp  Node.h
src/graphbuilder/output/: JsonOutput.cpp  JsonOutput.h
src/graphbuilder/tests/: CMakeLists.txt  TestMain.cpp
src/gtfs2geo/: Gtfs2GeoMain.cpp
src/gtfs2geo/config/: GraphBuilderConfig.h
src/gtfs2geo/graph/: EdgePL.cpp  EdgePL.h  EdgeTripGeom.cpp
src/gtfs2geo/tests/: CMakeLists.txt
src/gtfs2graph/: CMakeLists.txt  Gtfs2GraphMain.cpp  README.md  _config.h.in
src/gtfs2graph/builder/: Builder.cpp  Builder.h
src/gtfs2graph/config/: ConfigReader.cpp  ConfigReader.h  GraphBuilderConfig.h
src/gtfs2graph/graph/: BuildGraph.h  EdgePL.cpp  EdgePL.h  EdgeTripGeom.cpp  EdgeTripGeom.h  NodePL.cpp  NodePL.h
src/gtfs2graph/tests/: CMakeLists.txt  TestMain.cpp
src/gtfs2topo/: CMakeLists.txt  Gtfs2TopoMain.cpp  _config.h.in
src/gtfs2topo/builder/: Builder.cpp  Builder.h
src/gtfs2topo/config/: ConfigReader.cpp  ConfigReader.h  GraphBuilderConfig.h
src/gtfs2topo/graph/: BuildGraph.cpp  BuildGraph.h  Edge.cpp  Edge.h  EdgePL.cpp  EdgePL.h  EdgeTripGeom.cpp  EdgeTripGeom.h  Graph.cpp  Graph.h  Node.cpp  Node.h  NodePL.cpp  NodePL.h
src/gtfs2topo/output/: GeoJsonOutput.cpp  GeoJsonOutput.h
src/gtfs2topo/tests/: CMakeLists.txt  TestMain.cpp
src/gtfsparser/: .csvparser.cpp.swo  CMakeLists.txt  CsvParser.cpp  CsvParser.h  Parser.cpp  Parser.h  README.md  csvparser.cpp  csvparser.h  parser.cpp  parser.h
src/gtfsparser/gtfs/: Agency.h  Feed.cpp  Feed.h  Route.h  Service.cpp  Service.h  Shape.h  Stop.h  StopTime.h  Trip.cpp  Trip.h  feed.cpp  feed.h  route.h  service.cpp  service.h  shape.h  stop.h  stoptime.h  trip.cpp  trip.h
src/log/: Log.h
src/loom/: CMakeLists.txt  LoomMain.cpp  TransitMapMain.cpp  _config.h.in
src/loom/config/: ConfigReader.cpp  ConfigReader.h  LoomConfig.h  TransitMapConfig.h
src/loom/graph/: GraphBuilder.cpp  GraphBuilder.h  OrderCfg.h  Penalties.h  RenderGraph.cpp  RenderGraph.h
src/loom/optim/: CombNoILPOptimizer.cpp  CombNoILPOptimizer.h  CombOptimizer.cpp  CombOptimizer.h  ExhaustiveOptimizer.cpp  ExhaustiveOptimizer.h  GreedyOptimizer.cpp  GreedyOptimizer.h  HillClimbOptimizer.cpp  HillClimbOptimizer.h  ILPEdgeOrderOptimizer.cpp  ILPEdgeOrderOptimizer.h  ILPOptimizer.cpp  ILPOptimizer.h  NullOptimizer.cpp  NullOptimizer.h  OptGraph.cpp  OptGraph.h  OptGraphScorer.cpp  OptGraphScorer.h  Optimizer.cpp  Optimizer.h  OracleOptimizer.cpp  OracleOptimizer.h  Scorer.cpp  Scorer.h  SimulatedAnnealingOptimizer.cpp  SimulatedAnnealingOptimizer.h
src/loom/tests/: CMakeLists.txt  TestMain.cpp
src/octi/: CMakeLists.txt  Enlarger.cpp  Enlarger.h  OctiMain.cpp  Octilinearizer.cpp  Octilinearizer.h
src/octi/basegraph/: BaseGraph.h  ConvexHullOctiGridGraph.cpp  ConvexHullOctiGridGraph.h  GridEdgePL.cpp  GridEdgePL.h  GridGraph.cpp  GridGraph.h  GridNodePL.cpp  GridNodePL.h  HexGridGraph.cpp  HexGridGraph.h  NodeCost.h  OctiGridGraph.cpp  OctiGridGraph.h  OctiHananGraph.cpp  OctiHananGraph.h  OctiQuadTree.cpp  OctiQuadTree.h  OrthoRadialGraph.cpp  OrthoRadialGraph.h  PseudoOrthoRadialGraph.cpp  PseudoOrthoRadialGraph.h
src/octi/combgraph/: CombEdgePL.cpp  CombEdgePL.h  CombGraph.cpp  CombGraph.h  CombNodePL.cpp  CombNodePL.h  Drawing.cpp  Drawing.h  EdgeOrdering.cpp  EdgeOrdering.h
src/octi/config/: ConfigReader.cpp  ConfigReader.h  OctiConfig.h
src/octi/graph/: CombEdgePL.cpp  CombEdgePL.h  CombNodePL.cpp  CombNodePL.h  EdgeOrdering.cpp  EdgeOrdering.h  EdgePL.cpp  EdgePL.h  Graph.cpp  Graph.h  NodePL.cpp  NodePL.h
src/octi/gridgraph/: BaseGraph.h  EdgePL.cpp  EdgePL.h  GridEdgePL.cpp  GridEdgePL.h  GridGraph.cpp  GridGraph.h  GridNodePL.cpp  GridNodePL.h  NodeCost.h  NodePL.cpp  NodePL.h  OctiGridGraph.h
src/octi/ilp/: ILPGridOptimizer.cpp  ILPGridOptimizer.h
src/octi/tests/: CMakeLists.txt
src/octi/transitgraph/: EdgeOrdering.cpp  EdgeOrdering.h  TransitEdgePL.cpp  TransitEdgePL.h  TransitGraph.cpp  TransitGraph.h  TransitNodePL.cpp  TransitNodePL.h
src/pbutil/: CMakeLists.txt  Misc.h  Nullable.h  String.h
src/pbutil/geo/: BezierCurve.cpp  BezierCurve.h  CubicSpline.cpp  CubicSpline.h  Geo.h  PolyLine.cpp  PolyLine.h  PolyLine.h!
src/pbutil/log/: Log.h
src/pbutil/tests/: CMakeLists.txt  TestMain.cpp
src/pbutil/xml/: XmlWriter.cpp  XmlWriter.h
src/shared/: CMakeLists.txt
src/shared/linegraph/: EdgeOrdering.cpp  EdgeOrdering.h  Line.cpp  Line.h  LineEdgePL.cpp  LineEdgePL.h  LineGraph.cpp  LineGraph.h  LineNodePL.cpp  LineNodePL.h  NodeFront.cpp  NodeFront.h  Route.cpp  Route.h
src/shared/optim/: COINSolver.cpp  COINSolver.h  GLPKSolver.cpp  GLPKSolver.h  GurobiSolver.cpp  GurobiSolver.h  ILPSolvProv.h  ILPSolver.h
src/shared/rendergraph/: OrderCfg.h  Penalties.h  RenderGraph.cpp  RenderGraph.h
src/shared/style/: LineStyle.cpp  LineStyle.h
src/shared/tests/: CMakeLists.txt  GurobiSolverTest.cpp  GurobiSolverTest.h  ILPSolverTest.cpp  ILPSolverTest.h  TestMain.cpp
src/shared/transitgraph/: Route.cpp  Route.h  TransitEdgePL.cpp  TransitEdgePL.h  TransitGraph.cpp  TransitGraph.h  TransitNodePL.cpp  (+1 more)
src/skeletonbuilder/: CMakeLists.txt  SkeletonBuilderMain.cpp
src/test/: CMakeLists.txt  TestMain.cpp
src/topo/: CMakeLists.txt  TopoMain.cpp
src/topoeval/: CMakeLists.txt  DirLineGraph.h  TopoEvalMain.cpp  _config.h.in
src/transitmap/: CMakeLists.txt  TransitMapMain.cpp  TransitmapMain.cpp  transitmapmain.cpp
src/util/: Misc.h  Nullable.h  PriorityQueue.h  String.h
(+351 files in other folders)
